external-crates/move/crates/move-compiler/tests/move_check/parser/constant_type_annotation_invalid.move
module 0x42::m {
    const EThreadMaxxed = 1;
}
